# python-project-template

./: .editorconfig  .gitignore  .yamllint.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: codeql-analysis.yaml  main.yaml  release.yaml  safety-check.yaml  secret-scanning.yaml  test.yaml  trufflehog.yml  workflow-lint.yaml
test/project_name/: test_src.py
test/src/: test_src.py
