[tool.poetry]
name = "project-name"  # FIXME
version = "0.1.0"
description = ""  # FIXME
authors = ["ankandrew <61120139+ankandrew@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.test.dependencies]
pytest = "*"

[tool.poetry.group.dev.dependencies]
black = "*"
isort = "*"
pylint = "*"
mypy = "*"

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.isort]
line_length = 100
py_version = 39
include_trailing_comma = true
multi_line_output = 3
skip_glob = ["**venv", "**.venv", "**env", "**.env"]

[tool.pylint.miscellaneous]
notes = ["XXX"]

[tool.pylint.format]
max-line-length = 100

[tool.pylint.basic]
no-docstring-rgx = "^__|^test_"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
