[tool.poetry]
name = "project-name"  # TODO
version = "0.1.0"
description = "A short description of your package."  # TODO
authors = ["ankandrew <61120139+ankandrew@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.test.dependencies]
pytest = "*"

[tool.poetry.group.dev.dependencies]
mypy = "*"
pylint = "*"
ruff = "*"
yamllint = "*"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    "W",
    # Pyflakes
    "F",
    # pep8-naming
    "N",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # flake8-unused-arguments
    "ARG",
    # Pylint
    "PL",
    # Perflint
    "PERF",
    # Ruff-specific rules
    "RUF",
    # pandas-vet
    "PD",
    # flynt
    "FLY",
    # flake8-boolean-trap
    "FBT",
    # flake8-use-pathlib
    "PTH",
    # flake8-comprehensions
    "C4",
    # flake8-bandit
    "S",
    # flake8-raise
    "RSE",
    # flake8-datetimez
    "DTZ",
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
line-ending = "lf"

[tool.pylint.format]
max-line-length = 120

[tool.pylint.basic]
no-docstring-rgx = "^__|^test_"

[tool.pylint.miscellaneous]
notes = ["FIXME", "XXX"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
